[gd_scene load_steps=3 format=3 uid="uid://bpl648fi8hff4"]

[ext_resource type="Script" path="res://addons/Event Sheet Plugin/Elements/Event_sheet/event_sheet.gd" id="1_xxwur"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex4j4"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 14

[node name="EventSheet" type="MarginContainer" node_paths=PackedStringArray("event_block_container", "popup_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_xxwur")
event_block_container = NodePath("ColorRect/ScrollContainer/MarginContainer/EventBlockContainer")
popup_menu = NodePath("PopupMenu")

[node name="ColorRect" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ex4j4")

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EventBlockContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PopupMenu" type="PopupMenu" parent="."]

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
